--- a/Movie Searcher/Movie Searcher/Views/MovieTableViewCell.xib
+++ b/Movie Searcher/Movie Searcher/Views/MovieTableViewCell.xib
@@ -1,21 +1,64 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="182" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Movie_Searcher" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="434" height="182"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="434" height="182"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ia4-Oy-n3g">
+                        <rect key="frame" x="10" y="10" width="200" height="162"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="200" id="W2W-EV-BL3"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZgU-bE-4aj">
+                        <rect key="frame" x="230" y="10" width="194" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="P5M-er-1vk"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Yd-LQ-2L7">
+                        <rect key="frame" x="230" y="120" width="174" height="31"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="ia4-Oy-n3g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="0Mt-zF-DRQ"/>
+                    <constraint firstAttribute="trailing" secondItem="ZgU-bE-4aj" secondAttribute="trailing" constant="10" id="0Xu-eY-yzc"/>
+                    <constraint firstItem="7Yd-LQ-2L7" firstAttribute="top" secondItem="ZgU-bE-4aj" secondAttribute="bottom" constant="10" id="A6U-tC-bUW"/>
+                    <constraint firstItem="ZgU-bE-4aj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Eze-UP-fp1"/>
+                    <constraint firstItem="7Yd-LQ-2L7" firstAttribute="leading" secondItem="ia4-Oy-n3g" secondAttribute="trailing" constant="20" id="FsY-Ka-tZg"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="7Yd-LQ-2L7" secondAttribute="trailing" constant="10" id="GgZ-NZ-YXw"/>
+                    <constraint firstAttribute="bottom" secondItem="ia4-Oy-n3g" secondAttribute="bottom" constant="10" id="YNb-LM-Rsg"/>
+                    <constraint firstItem="ia4-Oy-n3g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="iU3-YX-gjU"/>
+                    <constraint firstItem="ZgU-bE-4aj" firstAttribute="leading" secondItem="ia4-Oy-n3g" secondAttribute="trailing" constant="20" id="kFS-sa-Txt"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="7Yd-LQ-2L7" secondAttribute="bottom" constant="20" id="tC8-hU-ZPb"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="moviePosterImageView" destination="ia4-Oy-n3g" id="scn-2S-0ME"/>
+                <outlet property="movieTitleLabel" destination="ZgU-bE-4aj" id="b8f-YZ-fDl"/>
+                <outlet property="movieYearLabel" destination="7Yd-LQ-2L7" id="R0p-Y5-gc1"/>
+            </connections>
+            <point key="canvasLocation" x="42.748091603053432" y="35.91549295774648"/>
         </tableViewCell>
     </objects>
 </document>
