--- a/Movie Searcher/Movie Searcher/Views/MovieTableViewCell.xib
+++ b/Movie Searcher/Movie Searcher/Views/MovieTableViewCell.xib
@@ -18,38 +18,35 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ia4-Oy-n3g">
-                        <rect key="frame" x="10" y="10" width="200" height="162"/>
+                        <rect key="frame" x="10" y="10" width="162" height="162"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="W2W-EV-BL3"/>
+                            <constraint firstAttribute="width" constant="162" id="DJ2-b5-rBK"/>
+                            <constraint firstAttribute="height" constant="162" id="FOQ-J0-rDC"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZgU-bE-4aj">
-                        <rect key="frame" x="230" y="10" width="194" height="100"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="100" id="P5M-er-1vk"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="182" y="10.000000000000002" width="242" height="28.666666666666671"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Yd-LQ-2L7">
-                        <rect key="frame" x="230" y="120" width="174" height="31"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <rect key="frame" x="182" y="48.666666666666664" width="242" height="14.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ia4-Oy-n3g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="0Mt-zF-DRQ"/>
-                    <constraint firstAttribute="trailing" secondItem="ZgU-bE-4aj" secondAttribute="trailing" constant="10" id="0Xu-eY-yzc"/>
-                    <constraint firstItem="7Yd-LQ-2L7" firstAttribute="top" secondItem="ZgU-bE-4aj" secondAttribute="bottom" constant="10" id="A6U-tC-bUW"/>
-                    <constraint firstItem="ZgU-bE-4aj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Eze-UP-fp1"/>
-                    <constraint firstItem="7Yd-LQ-2L7" firstAttribute="leading" secondItem="ia4-Oy-n3g" secondAttribute="trailing" constant="20" id="FsY-Ka-tZg"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="7Yd-LQ-2L7" secondAttribute="trailing" constant="10" id="GgZ-NZ-YXw"/>
-                    <constraint firstAttribute="bottom" secondItem="ia4-Oy-n3g" secondAttribute="bottom" constant="10" id="YNb-LM-Rsg"/>
-                    <constraint firstItem="ia4-Oy-n3g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="iU3-YX-gjU"/>
-                    <constraint firstItem="ZgU-bE-4aj" firstAttribute="leading" secondItem="ia4-Oy-n3g" secondAttribute="trailing" constant="20" id="kFS-sa-Txt"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="7Yd-LQ-2L7" secondAttribute="bottom" constant="20" id="tC8-hU-ZPb"/>
+                    <constraint firstAttribute="bottom" secondItem="ia4-Oy-n3g" secondAttribute="bottom" constant="10" id="0T1-TM-3wR"/>
+                    <constraint firstItem="ZgU-bE-4aj" firstAttribute="leading" secondItem="ia4-Oy-n3g" secondAttribute="trailing" constant="10" id="1dv-qp-xha"/>
+                    <constraint firstItem="ia4-Oy-n3g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="JLZ-XQ-o01"/>
+                    <constraint firstItem="ZgU-bE-4aj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="PZ7-c0-IeO"/>
+                    <constraint firstItem="7Yd-LQ-2L7" firstAttribute="leading" secondItem="ia4-Oy-n3g" secondAttribute="trailing" constant="10" id="RHK-ys-YRd"/>
+                    <constraint firstAttribute="trailing" secondItem="7Yd-LQ-2L7" secondAttribute="trailing" constant="10" id="SQm-Zg-tDr"/>
+                    <constraint firstItem="ia4-Oy-n3g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Xjs-MU-SxW"/>
+                    <constraint firstItem="7Yd-LQ-2L7" firstAttribute="top" secondItem="ZgU-bE-4aj" secondAttribute="bottom" constant="10" id="Zoo-ZE-yR4"/>
+                    <constraint firstAttribute="trailing" secondItem="ZgU-bE-4aj" secondAttribute="trailing" constant="10" id="fGM-gV-eLG"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
