--- a/Movie Searcher/Movie Searcher/Base.lproj/Main.storyboard
+++ b/Movie Searcher/Movie Searcher/Base.lproj/Main.storyboard
@@ -63,15 +63,73 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="IWB-os-OAc"/>
+                        <segue destination="mQf-SG-A5z" kind="relationship" relationship="rootViewController" id="R1u-1V-9ww"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8O9-tx-IX4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="-869" y="-27"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zth-hF-kTo">
+            <objects>
+                <viewController id="mQf-SG-A5z" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PFk-a5-YtT">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popcorn.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GIM-no-LOC">
+                                <rect key="frame" x="76.666666666666686" y="304.66666666666669" width="240" height="244.00000000000006"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="DXk-HH-HqL"/>
+                                    <constraint firstAttribute="width" secondItem="GIM-no-LOC" secondAttribute="height" multiplier="1:1" id="pOu-Qt-kGk"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome To Movie Searcher" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFj-xr-5iF">
+                                <rect key="frame" x="10" y="556" width="373" height="114.66666666666663"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98g-WG-7bN">
+                                <rect key="frame" x="76.666666666666686" y="680.66666666666663" width="240" height="42.666666666666629"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="zQ4-5D-oZq"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Search a movie">
+                                    <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="24"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="eKx-yR-ont"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oQ0-Ot-7Uk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NFj-xr-5iF" firstAttribute="top" secondItem="GIM-no-LOC" secondAttribute="bottom" constant="10" id="58a-Gq-RPg"/>
+                            <constraint firstItem="GIM-no-LOC" firstAttribute="centerX" secondItem="PFk-a5-YtT" secondAttribute="centerX" id="DOH-C3-4Pt"/>
+                            <constraint firstItem="NFj-xr-5iF" firstAttribute="leading" secondItem="oQ0-Ot-7Uk" secondAttribute="leading" constant="10" id="ak7-AN-Hp9"/>
+                            <constraint firstItem="GIM-no-LOC" firstAttribute="centerY" secondItem="PFk-a5-YtT" secondAttribute="centerY" id="fe0-H5-KdY"/>
+                            <constraint firstItem="98g-WG-7bN" firstAttribute="top" secondItem="NFj-xr-5iF" secondAttribute="bottom" constant="10" id="hOZ-5N-yoF"/>
+                            <constraint firstItem="oQ0-Ot-7Uk" firstAttribute="trailing" secondItem="NFj-xr-5iF" secondAttribute="trailing" constant="10" id="qfh-aD-cyc"/>
+                            <constraint firstItem="98g-WG-7bN" firstAttribute="centerX" secondItem="PFk-a5-YtT" secondAttribute="centerX" id="uvw-XN-PXl"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="QMB-sV-8IE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MF3-45-6I1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="31" y="-27"/>
         </scene>
     </scenes>
     <resources>
+        <image name="popcorn.fill" catalog="system" width="98" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
