--- a/Movie Searcher/Movie Searcher/Base.lproj/Main.storyboard
+++ b/Movie Searcher/Movie Searcher/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="wgH-8f-MqW"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="cZx-xK-WWA">
@@ -78,52 +78,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome To Movie Searcher" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFj-xr-5iF">
-                                <rect key="frame" x="30" y="443" width="333" height="114.66666666666663"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="GIM-no-LOC">
-                                <rect key="frame" x="40" y="100" width="313" height="313"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="GIM-no-LOC" secondAttribute="height" multiplier="1:1" id="kqF-ks-x1E"/>
-                                </constraints>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MpU-xH-5lO">
+                                <rect key="frame" x="30" y="263" width="333" height="535"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="740" text="Welcome To Movie Searcher" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFj-xr-5iF">
+                                        <rect key="frame" x="8" y="0.0" width="317" height="114.66666666666667"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="48"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="With Movie Searcher you can search your favorite movies. Also you can visit their Imdb pages." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-u1-iQ6">
+                                        <rect key="frame" x="13.666666666666657" y="228.33333333333329" width="305.66666666666674" height="114.66666666666666"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98g-WG-7bN">
+                                        <rect key="frame" x="66.333333333333329" y="492.33333333333343" width="200.33333333333337" height="42.666666666666686"/>
+                                        <color key="tintColor" systemColor="labelColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Search a movie">
+                                            <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="24"/>
+                                            <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="show" id="eKx-yR-ont"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MovieSearcher" translatesAutoresizingMaskIntoConstraints="NO" id="JT3-Gt-DwN">
+                                <rect key="frame" x="30" y="133" width="333" height="100"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="With Movie Searcher you can search your favorite movies. Also you can visit their Imdb pages." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-u1-iQ6">
-                                <rect key="frame" x="30" y="587.66666666666663" width="333" height="114.66666666666663"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98g-WG-7bN">
-                                <rect key="frame" x="96.333333333333329" y="722.33333333333337" width="200.33333333333337" height="42.666666666666629"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Search a movie">
-                                    <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="24"/>
-                                    <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="eKx-yR-ont"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oQ0-Ot-7Uk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VMv-u1-iQ6" firstAttribute="top" secondItem="NFj-xr-5iF" secondAttribute="bottom" constant="30" id="27L-Qr-360"/>
-                            <constraint firstItem="GIM-no-LOC" firstAttribute="leading" secondItem="PFk-a5-YtT" secondAttribute="leading" constant="40" id="9LI-Hk-VkM"/>
-                            <constraint firstItem="98g-WG-7bN" firstAttribute="centerX" secondItem="PFk-a5-YtT" secondAttribute="centerX" id="DiX-Fv-Ltb"/>
-                            <constraint firstAttribute="trailing" secondItem="VMv-u1-iQ6" secondAttribute="trailing" constant="30" id="SKh-DV-5oa"/>
-                            <constraint firstAttribute="trailing" secondItem="GIM-no-LOC" secondAttribute="trailing" constant="40" id="Uhb-ER-EEk"/>
-                            <constraint firstItem="VMv-u1-iQ6" firstAttribute="leading" secondItem="PFk-a5-YtT" secondAttribute="leading" constant="30" id="Vq3-gp-hb4"/>
-                            <constraint firstItem="98g-WG-7bN" firstAttribute="top" secondItem="VMv-u1-iQ6" secondAttribute="bottom" constant="20" id="YdD-UZ-cpX"/>
-                            <constraint firstItem="GIM-no-LOC" firstAttribute="top" secondItem="PFk-a5-YtT" secondAttribute="top" constant="100" id="Zbb-YV-VcV"/>
-                            <constraint firstAttribute="trailing" secondItem="NFj-xr-5iF" secondAttribute="trailing" constant="30" id="j9X-aW-wZQ"/>
-                            <constraint firstItem="NFj-xr-5iF" firstAttribute="leading" secondItem="PFk-a5-YtT" secondAttribute="leading" constant="30" id="qdT-5K-jWR"/>
-                            <constraint firstItem="NFj-xr-5iF" firstAttribute="top" secondItem="GIM-no-LOC" secondAttribute="bottom" constant="30" id="rUI-QG-OfJ"/>
+                            <constraint firstItem="JT3-Gt-DwN" firstAttribute="leading" secondItem="oQ0-Ot-7Uk" secondAttribute="leading" constant="30" id="7tr-7n-Rzo"/>
+                            <constraint firstItem="oQ0-Ot-7Uk" firstAttribute="trailing" secondItem="JT3-Gt-DwN" secondAttribute="trailing" constant="30" id="Abl-N6-wSR"/>
+                            <constraint firstItem="MpU-xH-5lO" firstAttribute="top" secondItem="JT3-Gt-DwN" secondAttribute="bottom" constant="30" id="ONL-gl-djV"/>
+                            <constraint firstAttribute="trailing" secondItem="MpU-xH-5lO" secondAttribute="trailing" constant="30" id="Xdw-TU-nI5"/>
+                            <constraint firstItem="MpU-xH-5lO" firstAttribute="leading" secondItem="oQ0-Ot-7Uk" secondAttribute="leading" constant="30" id="gk7-gJ-Bn6"/>
+                            <constraint firstItem="JT3-Gt-DwN" firstAttribute="top" secondItem="oQ0-Ot-7Uk" secondAttribute="top" constant="30" id="nsy-aF-hif"/>
+                            <constraint firstItem="oQ0-Ot-7Uk" firstAttribute="bottom" secondItem="MpU-xH-5lO" secondAttribute="bottom" constant="20" id="tIl-WX-95x"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QMB-sV-8IE"/>
@@ -134,7 +131,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="appLogo" width="500" height="500"/>
+        <image name="MovieSearcher" width="100" height="100"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
